FUSION-374 #comment Fixed issues on IE including animations

--- a/src/styles/core/_core.scss
+++ b/src/styles/core/_core.scss
@@ -107,6 +107,10 @@ html {
       }
     }
 
+    input::-ms-clear{
+      display: none;
+    }
+
     button, button.btn {
       font-family: $button-font;
       font-size: $button-font-size;
